--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Utms
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:mfLOLVXvYwpKM9TjrVDV9bo9nRskTeqWWTGKALlOOBc=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -8,11 +8,11 @@ LOG_CHANNEL=stack
 
 DB_DEBUG=false
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=192.168.99.45
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=dev_ojms
+DB_USERNAME=root
+DB_PASSWORD=1234
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
